Updates to support check-token put - token in body behaviour

--- a/github/src/main/resources/static/index.html
+++ b/github/src/main/resources/static/index.html
@@ -22,6 +22,18 @@
 		<div>
 			With Github: <a href="/login/github">click here</a>
 		</div>
+		<div>
+			With o2wifi: <a href="/login/o2wifi">click here</a>
+		</div>
+
+		<div>
+			With google: <a href="/login/google">click here</a>
+		</div>
+
+		<div>
+			With sparklr: <a href="/login/sparklr">click here</a>
+		</div>
+
 	</div>
 	<div class="container" ng-show="home.authenticated">
 		Logged in as: <span ng-bind="home.user"></span>
